# anylogic-mcp-server

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_SETUP.md  CLAUDE.md  CLAUDE_DESKTOP_AUTH_SETUP.md  GCP_DEPLOYMENT.md  GITHUB_OAUTH_SETUP.md  README.md  anylogic_mcp_server.py  auth_config.py  auth_decorators.py  authenticated_mcp_server.py  claude_desktop_config.json  env-vars.yaml  fastmcp_anylogic_server.py  fastmcp_anylogic_server_stdio_auth.py  fastmcp_anylogic_server_v2.py  gcp-deploy.sh  github_oauth.py  githubauth.md  jwt_manager.py  pyproject.toml  start_server.py  test_auth_simple.py  test_auth_system.py
.claude/: settings.local.json
docker/: DockerFile  docker-compose.yml
scripts/: install.sh  run.sh  run_server.bat
simulations/: README.md
tests/: test_fastmcp_final.py  test_fastmcp_server.py  test_fastmcp_simple.py  test_mcp_server.py  test_mcp_server_fixed.py  test_modern_server.py
